--- a/README.textile
+++ b/README.textile
@@ -13,9 +13,10 @@ The OpenCL API is not known for its terseness; consider this "'Hello World' exam
 
 (with-cl
   (with-program (compile-program source)
-    (let [a (wrap [1 2 3] :float))]
-      (enqueue-kernel :square 3 a)
-      (enqueue-read c))))
+    (let [a (wrap [1 2 3] :float)
+          b (create-buffer 3 :float)]
+      (enqueue-kernel :square 3 a b)
+      (enqueue-read b))))
 </code></pre>
 	    
 This is very much a work in progress, but still can be immediately useful for some purposes.  Anyone using it is encouraged to give feedback.
