--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,7 @@ Calx is an idiomatic wrapper for OpenCL, which is an abstraction layer for paral
 
 The OpenCL API is not known for its terseness; consider this "'Hello World' example":http://developer.apple.com/mac/library/samplecode/OpenCL_Hello_World_Example/Listings/hello_c.html#//apple_ref/doc/uid/DTS40008187-hello_c-DontLinkElementID_4 example demonstrating the necessary steps to square a list of floating point numbers.  Using Calx, the same result can be achieved like so:
 
-<pre><code>(use '[calx core data])	
+<pre><code>(use 'calx)
 	
 (def source
   "__kernel void square (
